--- a/front/src/app/dashboard-e-commerce/home/modules/productos-pendientes/productos-pendientes.component.html
+++ b/front/src/app/dashboard-e-commerce/home/modules/productos-pendientes/productos-pendientes.component.html
@@ -1,1 +1,20 @@
-<p>productos-pendientes works!</p>
+<div class="pagetitle">
+    <h1>Productos pendientes</h1>
+    <nav>
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="index.html">Productos</a></li>
+            <li class="breadcrumb-item active">Pendientes</li>
+        </ol>
+    </nav>
+</div>
+
+<div class="col-sm-12">
+    <div class="card">
+        <div class="card-body card-w-title botonera">
+            <button class="btn btn-primary t-bold" (click)="obtenerProductosPendientes()">Obtener</button>
+            <button class="btn btn-success t-bold">Excel</button>
+            <button class="btn btn-danger t-bold" (click)="limpiarTabla()">Limpiar</button>
+        </div>
+    </div>
+    <app-datatable [columnasTabla]="columnasProductos" [datosTabla]="listaProductos" [tableConfig]="tableConfig"></app-datatable>
+</div>
