Se agrega modal de modificación pendiente de funcionalidad y validaciones

--- a/front/src/app/dashboard-e-commerce/home/components/datatable/datatable.component.html
+++ b/front/src/app/dashboard-e-commerce/home/components/datatable/datatable.component.html
@@ -1,4 +1,4 @@
-<div class="card recent-sales overflow-auto">
+<div class="card overflow-auto">
     <div class="card-body">
         <br>
         <div class="d-flex justify-content-center">
