Se agrega funcionalidad crud de apartado caracteristicas dentro del modal de modificación producto

--- a/front/src/app/dashboard-e-commerce/home/components/datatable/datatable.component.css
+++ b/front/src/app/dashboard-e-commerce/home/components/datatable/datatable.component.css
@@ -81,3 +81,11 @@ thead {
 .card {
     margin-bottom: -20px !important;
 }
+
+.warning {
+    background-color: wheat;
+}
+
+.danger {
+    background-color: #FFE0D9;
+}
