--- a/front/src/app/dashboard-e-commerce/home/components/sidenav/sidenav.component.html
+++ b/front/src/app/dashboard-e-commerce/home/components/sidenav/sidenav.component.html
@@ -13,12 +13,12 @@
                 <i class="bi bi-people"></i><span>Productos</span><i class="bi bi-chevron-down ms-auto"></i>
             </a>
             <ul id="components-nav-clientes" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-                <li [routerLink]="['productosPendientes']">
+                <li [routerLink]="['productos/pendientes']">
                     <a>
                         <i class="bi bi-circle"></i><span>Porductos pendientes</span>
                     </a>
                 </li>
-                <li [routerLink]="['productosTienda']">
+                <li [routerLink]="['productos/tienda']">
                     <a>
                         <i class="bi bi-circle"></i><span>Porductos en tienda</span>
                     </a>
