--- a/front/src/app/dashboard-e-commerce/home/modules/productos/modificacion-producto/modificacion-producto.component.html
+++ b/front/src/app/dashboard-e-commerce/home/modules/productos/modificacion-producto/modificacion-producto.component.html
@@ -34,26 +34,28 @@
                         </div>
                         <div class="col-lg-2">
                             <label for="stockProducto" class="form-label">Stock:</label>
-                            <input type="text" class="form-control" formControlName="stockProducto" id="stockProducto"
+                            <input type="text" class="form-control t-center" formControlName="stockProducto" id="stockProducto"
                                 placeholder="Stock">
                         </div>
                         <div class="col-lg-2">
                             <label for="precioProducto" class="form-label">Precio:</label>
                             <div class="input-group mb-3">
                                 <span class="input-group-text">$</span>
-                                <input type="text" class="form-control" formControlName="precioProducto"
+                                <input type="text" class="form-control t-center" formControlName="precioProducto"
                                     id="precioProducto" placeholder="Precio"
                                     [value]="(detalleProducto?.precio ?? 0) | number:'1.2-2'">
                             </div>
                         </div>
                         <div class="col-lg-2">
                             <label for="descuento" class="form-label">Descuento %:</label>
-                            <input type="text" class="form-control" formControlName="descuento" id="descuento"
-                                placeholder="Descuento" (keypress)="soloNumeros($event)" maxlength="2">
+                            <div class="input-group mb-3">
+                                <input type="text" class="form-control t-center" formControlName="descuento" id="descuento" placeholder="Descuento" (keypress)="soloNumeros($event)" maxlength="2">
+                                <span class="input-group-text">%</span>
+                            </div>
                         </div>
                         <div class="col-lg-4">
                             <label for="apartadoProducto" class="form-label required">Apartado:</label>
-                            <select formControlName="apartadoProducto" id="apartadoProducto" class="form-select"
+                            <select formControlName="apartadoProducto" id="apartadoProducto" class="form-select t-center"
                                 (change)="cambioApartado()">
                                 <option value="" style="display: none; visibility: hidden;">Elija un apartado</option>
                                 <option *ngFor="let apartado of apartados" [value]="apartado.id">{{apartado.nombre}}
@@ -62,7 +64,7 @@
                         </div>
                         <div class="col-lg-4">
                             <label for="categoriaProducto" class="form-label">Categoría:</label>
-                            <select formControlName="categoriaProducto" id="categoriaProducto" class="form-select">
+                            <select formControlName="categoriaProducto" id="categoriaProducto" class="form-select t-center">
                                 <option value="" style="display: none; visibility: hidden;">Elija una categoría</option>
                                 <option *ngFor="let categoria of categoriasApartados" [value]="categoria.id">
                                     {{categoria.nombre}}</option>
