Se agrega consumo general de pedidos y mejoras en datatable

--- a/front/src/app/dashboard-e-commerce/home/components/datatable/datatable.component.css
+++ b/front/src/app/dashboard-e-commerce/home/components/datatable/datatable.component.css
@@ -89,3 +89,18 @@ thead {
 .danger {
     background-color: #FFE0D9;
 }
+
+.input-rage-date {
+	max-width: 150px !important;
+}
+
+/* Agrega este estilo al archivo CSS correspondiente */
+.date-range-filter {
+    display: flex;
+    align-items: center;
+  }
+  
+  .date-range-filter input {
+    margin-right: 5px;
+  }
+  
