--- a/front/src/app/dashboard-e-commerce/home/modules/productos-pendientes/productos-pendientes.component.html
+++ b/front/src/app/dashboard-e-commerce/home/modules/productos-pendientes/productos-pendientes.component.html
@@ -2,7 +2,7 @@
     <h1>Productos {{this.datosMostrar == 'pendientes' ? 'pendientes' : 'en tienda'}}</h1>
     <nav>
         <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="index.html">Productos</a></li>
+            <li class="breadcrumb-item"><a href="javascript:void(0)">Productos</a></li>
             <li class="breadcrumb-item active">{{this.datosMostrar == 'pendientes' ? 'Pendientes' : 'En tienda'}}</li>
         </ol>
     </nav>
