--- a/front/src/app/dashboard-e-commerce/home/components/sidenav/sidenav.component.html
+++ b/front/src/app/dashboard-e-commerce/home/components/sidenav/sidenav.component.html
@@ -9,21 +9,29 @@
 
         <li class="nav-heading">Administración</li>
         <li class="nav-item">
-            <a class="nav-link collapsed" data-bs-target="#components-nav-clientes" data-bs-toggle="collapse" href="#">
+            <a class="nav-link collapsed" data-bs-target="#productos" data-bs-toggle="collapse" href="#">
                 <i class="bi bi-people"></i><span>Productos</span><i class="bi bi-chevron-down ms-auto"></i>
             </a>
-            <ul id="components-nav-clientes" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+            <ul id="productos" class="nav-content collapse " data-bs-parent="#sidebar-nav">
                 <li [routerLink]="['productos/pendientes']">
                     <a>
-                        <i class="bi bi-circle"></i><span>Porductos pendientes</span>
+                        <i class="bi bi-circle"></i><span>Pendientes</span>
                     </a>
                 </li>
                 <li [routerLink]="['productos/tienda']">
                     <a>
-                        <i class="bi bi-circle"></i><span>Porductos en tienda</span>
+                        <i class="bi bi-circle"></i><span>En tienda</span>
                     </a>
                 </li>
             </ul>
+        </li>
+
+        <li class="nav-heading">Gestión</li>
+        <li class="nav-item">
+            <a class="nav-link collapsed" [routerLink]="['pedidos']">
+                <i class="ri-home-2-line"></i>
+                <span>Pedidos</span>
+            </a>
         </li>
     </ul>
 </aside>
