Se corrige funcionaidad tabla

--- a/front/src/app/dashboard-e-commerce/home/components/sidenav/sidenav.component.html
+++ b/front/src/app/dashboard-e-commerce/home/components/sidenav/sidenav.component.html
@@ -28,6 +28,12 @@
 
         <li class="nav-heading">Gestión</li>
         <li class="nav-item">
+            <a class="nav-link collapsed" [routerLink]="['clientes']">
+                <i class="ri-home-2-line"></i>
+                <span>Clientes</span>
+            </a>
+        </li>
+        <li class="nav-item">
             <a class="nav-link collapsed" [routerLink]="['pedidos']">
                 <i class="ri-home-2-line"></i>
                 <span>Pedidos</span>
