--- a/front/src/app/dashboard-e-commerce/home/components/datatable/datatable.component.html
+++ b/front/src/app/dashboard-e-commerce/home/components/datatable/datatable.component.html
@@ -17,7 +17,7 @@
             <table class="table data-table-border custom-table">
                 <thead class="thead-light">
                     <tr>
-                        <th *ngFor="let columna of getColumnKeys()" scope="col"
+                        <th *ngFor="let columna of getColumnKeys()" scope="col" [ngClass]="{'t-center': tableConfig[columna]?.center}"
                             (click)="sortColumn(columna)">
                             {{ columnasTabla[columna] }}
                             <span *ngIf="sortBy === columna && !sortDesc && !tableConfig[columna]?.noFilter">&#9650;</span>
@@ -53,7 +53,7 @@
                 <tbody>
                     <ng-container *ngIf="paginatedItems.length > 0; else sinInfo">
                         <tr *ngFor="let item of paginatedItems">
-                            <td *ngFor="let columna of getColumnKeys()" class="check-column">
+                            <td *ngFor="let columna of getColumnKeys()" class="check-column" [ngClass]="{'t-center': tableConfig[columna]?.center}">
                                 <ng-container *ngIf="tableConfig[columna]?.checkColumn; else actionColumn">
                                     <label
                                         class="form-check form-switch d-flex justify-content-center align-items-center check-column-item">
