Se agrega funcionalidad consulta de pedidos y detalle pedido en dashboard+

--- a/front/src/app/dashboard-e-commerce/home/components/sidenav/sidenav.component.html
+++ b/front/src/app/dashboard-e-commerce/home/components/sidenav/sidenav.component.html
@@ -39,5 +39,27 @@
                 <span>Pedidos</span>
             </a>
         </li>
+        <li class="nav-item">
+            <a class="nav-link collapsed" data-bs-target="#catalogos" data-bs-toggle="collapse" href="#">
+                <i class="bi bi-people"></i><span>Catálogos</span><i class="bi bi-chevron-down ms-auto"></i>
+            </a>
+            <ul id="catalogos" class="nav-content collapse " data-bs-parent="#sidebar-nav">
+                <li>
+                    <a>
+                        <i class="bi bi-circle"></i><span>Status Pedidos</span>
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        <i class="bi bi-circle"></i><span>Categorías Productos</span>
+                    </a>
+                </li>
+                <li>
+                    <a>
+                        <i class="bi bi-circle"></i><span>Apartados Productos</span>
+                    </a>
+                </li>
+            </ul>
+        </li>
     </ul>
 </aside>
