--- a/front/src/app/dashboard-e-commerce/home/components/dropdown/dropdown.component.css
+++ b/front/src/app/dashboard-e-commerce/home/components/dropdown/dropdown.component.css
@@ -16,4 +16,6 @@
     min-width: 300px !important;
     max-height: 200px !important;
     overflow-y: auto !important;
+    margin-top: 20px !important;
+    margin-left: -30px !important;
 }
