--- a/front/src/app/dashboard-e-commerce/home/modules/productos/consulta-productos/consulta-productos.component.html
+++ b/front/src/app/dashboard-e-commerce/home/modules/productos/consulta-productos/consulta-productos.component.html
@@ -1,1 +1,21 @@
-<p>consulta-productos works!</p>
+<div class="pagetitle">
+    <h1>Productos {{this.datosMostrar == 'pendientes' ? 'pendientes' : 'en tienda'}}</h1>
+    <nav>
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="javascript:void(0)">Productos</a></li>
+            <li class="breadcrumb-item active">{{this.datosMostrar == 'pendientes' ? 'Pendientes' : 'En tienda'}}</li>
+        </ol>
+    </nav>
+</div>
+
+<div class="col-sm-12">
+    <div class="card">
+        <div class="card-body card-w-title botonera">
+            <button class="btn btn-primary t-bold" (click)="obtenerProductos()">Obtener</button>
+            <button class="btn btn-success t-bold">Excel</button>
+            <button class="btn btn-danger t-bold" (click)="limpiarTabla()">Limpiar</button>
+        </div>
+    </div>
+    <app-datatable *ngIf="this.datosMostrar == 'pendientes'" [columnasTabla]="columnasProductosPendientes" [datosTabla]="listaProductos" [tableConfig]="tableConfigPendientes"></app-datatable>
+    <app-datatable *ngIf="this.datosMostrar != 'pendientes'" [columnasTabla]="columnasProductosTienda" [datosTabla]="listaProductos" [tableConfig]="tableConfig"></app-datatable>
+</div>
