--- a/front/src/app/dashboard-e-commerce/home/modules/pedidos/detalle-pedido/detalle-pedido.component.html
+++ b/front/src/app/dashboard-e-commerce/home/modules/pedidos/detalle-pedido/detalle-pedido.component.html
@@ -94,6 +94,20 @@
                 </div>
                 <div class="tab-pane fade" id="bordered-justified-profile" role="tabpanel"
                     aria-labelledby="profile-tab">
+                    <form autocomplete="off" class="row g-3" [formGroup]="formDatosPedido">
+                        <div class="col-lg-4 col-md-6 col-12">
+                            <label for="fechaPedido" class="form-label">Fecha Pedido:</label>
+                            <input type="date" class="form-control" formControlName="fechaPedido" id="fechaPedido">
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-12">
+                            <label for="fechaEntregaEstimada" class="form-label">Fecha Estimada Entrega:</label>
+                            <input type="date" class="form-control" formControlName="fechaEntregaEstimada" id="fechaEntregaEstimada" (change)="cambioFechaEntregaEstimada()">
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-12">
+                            <label for="fechaEntrega" class="form-label">Fecha Entrega:</label>
+                            <input type="date" class="form-control" formControlName="fechaEntrega" id="fechaEntrega">
+                        </div>
+                    </form>
                     <h5 class="card-title" align="center">Productos pedido</h5>
                     <app-datatable [columnasTabla]="columnasProductosPedidos" [datosTabla]="productosPedido"></app-datatable>
                 </div>
