Ajustes consulta pedidos

--- a/front/src/app/dashboard-e-commerce/home/components/datatable/datatable.component.css
+++ b/front/src/app/dashboard-e-commerce/home/components/datatable/datatable.component.css
@@ -93,3 +93,8 @@ thead {
 th {
     vertical-align: middle !important;
 }
+
+input[type="date" i] {
+    height: 25px !important;
+    max-width: 150px;
+}
