Se agrega funcionalidad generica del dashboard admin tienda

--- a/front/src/styles.css
+++ b/front/src/styles.css
@@ -826,17 +826,22 @@ h6 {
 	flex-grow: 0;
 }
 
-.dashboard .sales-card .card-icon {
+.dashboard .primary .card-icon {
 	color: #4154f1;
 	background: #f6f6fe;
 }
 
-.dashboard .revenue-card .card-icon {
+.dashboard .warning .card-icon {
+	color: #ffae00;
+	background: #fff6c2;
+}
+
+.dashboard .success .card-icon {
 	color: #2eca6a;
 	background: #e0f8e9;
 }
 
-.dashboard .customers-card .card-icon {
+.dashboard .danger .card-icon {
 	color: #ff771d;
 	background: #ffecdf;
 }
