--- a/front/src/app/dashboard-e-commerce/home/modules/inicio/inicio.component.html
+++ b/front/src/app/dashboard-e-commerce/home/modules/inicio/inicio.component.html
@@ -1,107 +1,256 @@
+<div class="pagetitle">
+    <h1>Inicio</h1>
+    <nav>
+        <ol class="breadcrumb">
+            <li class="breadcrumb-item"><a href="index.html">Inicio</a></li>
+            <li class="breadcrumb-item active">Estadísticas</li>
+        </ol>
+    </nav>
+</div>
+
 <section class="section dashboard">
     <div class="row">
-        <div class="col-xxl-4 col-sm-6">
-            <div class="card info-card sales-card">
+        <div class="col-xxl-8">
+            <div class="row">
+                <div class="col-xxl-4 col-sm-6">
+                    <div class="card info-card primary">
+                        <div class="card-body">
+                            <h5 class="card-title">Productos <span>| Pendientes</span></h5>
 
-                <div class="filter">
-                    <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
-                    <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-                        <li class="dropdown-header text-start">
-                            <h6>Filter</h6>
-                        </li>
+                            <div class="d-flex align-items-center">
+                                <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                                    <i class="bi bi-cart"></i>
+                                </div>
+                                <div class="ps-3">
+                                    <h6>
+                                        <ng-container *ngIf="this.cantidadProductosPendientes === ''; else cantidadPP">
+                                            <div class="spinner-border text-primary" role="status">
+                                                <span class="visually-hidden">Loading...</span>
+                                            </div>
+                                        </ng-container>
+                                        <ng-template #cantidadPP>
+                                            {{this.cantidadProductosPendientes}}
+                                        </ng-template>
+                                    </h6>
+                                    <span class="text-success small pt-1 fw-bold"></span> <span
+                                        class="text-muted small pt-2 ps-1">Pendientes</span>
 
-                        <li><a class="dropdown-item" href="#">Today</a></li>
-                        <li><a class="dropdown-item" href="#">This Month</a></li>
-                        <li><a class="dropdown-item" href="#">This Year</a></li>
-                    </ul>
-                </div>
-
-                <div class="card-body">
-                    <h5 class="card-title">Productos <span>| Pendientes</span></h5>
-
-                    <div class="d-flex align-items-center">
-                        <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                            <i class="bi bi-cart"></i>
+                                </div>
+                            </div>
                         </div>
-                        <div class="ps-3">
-                            <h6>{{this.cantidadProductosPendientes}}</h6>
-                            <span class="text-success small pt-1 fw-bold"></span> <span
-                                class="text-muted small pt-2 ps-1">Pendientes</span>
 
-                        </div>
                     </div>
                 </div>
 
+                <div class="col-xxl-4 col-sm-6">
+                    <div class="card info-card danger">
+                        <div class="card-body">
+                            <h5 class="card-title">Clientes <span>| Activos</span></h5>
+
+                            <div class="d-flex align-items-center">
+                                <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                                    <i class="bi bi-people"></i>
+                                </div>
+                                <div class="ps-3">
+                                    <h6>
+                                        <ng-container *ngIf="this.cantidadUsuariosTienda === ''; else cantidadUT">
+                                            <div class="spinner-border text-primary" role="status">
+                                                <span class="visually-hidden">Loading...</span>
+                                            </div>
+                                        </ng-container>
+                                        <ng-template #cantidadUT>
+                                            {{this.cantidadUsuariosTienda}}
+                                        </ng-template>
+                                    </h6>
+                                    <span class="text-success small pt-1 fw-bold"></span> <span
+                                        class="text-muted small pt-2 ps-1">Activos</span>
+
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="col-xxl-4 col-12">
+                    <div class="card info-card warning">
+
+                        <div class="filter">
+                            <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
+                            <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
+                                <li class="dropdown-header text-start">
+                                    <h6>Filter</h6>
+                                </li>
+
+                                <li><a class="dropdown-item">Hoy</a></li>
+                                <li><a class="dropdown-item">Este mes</a></li>
+                                <li><a class="dropdown-item">Este año</a></li>
+                                <li><a class="dropdown-item">Todos</a></li>
+                            </ul>
+                        </div>
+
+                        <div class="card-body">
+                            <h5 class="card-title">Pedidos <span>| Pendientes</span></h5>
+
+                            <div class="d-flex align-items-center">
+                                <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                                    <i class="bi bi-list-nested"></i>
+                                </div>
+                                <div class="ps-3">
+                                    <h6>
+                                        <ng-container *ngIf="this.cantidadPedidosPendientes === ''; else cantidadPeT">
+                                            <div class="spinner-border text-primary" role="status">
+                                                <span class="visually-hidden">Loading...</span>
+                                            </div>
+                                        </ng-container>
+                                        <ng-template #cantidadPeT>
+                                            {{this.cantidadPedidosPendientes}}
+                                        </ng-template>
+                                    </h6>
+                                    <span class="text-success small pt-1 fw-bold"></span> <span
+                                        class="text-muted small pt-2 ps-1">Pendientes</span>
+
+                                </div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+                <div class="col-12">
+                    <div class="card">
+                        <div class="card-bod">
+                            <h5 class="card-title" align="center">Productos agregados recientemente</h5>
+                        </div>
+                    </div>
+                    <app-datatable [columnasTabla]="columnasProductosTienda" [tableConfig]="tableConfig" [datosTabla]="listaProductosRecientes"></app-datatable>
+                </div>
             </div>
         </div>
 
-        <div class="col-xxl-4 col-sm-6">
-            <div class="card info-card revenue-card">
+        <div class="col-xxl-4">
+            <div class="row">
+                <div class="col-xxl-12 col-md-6 col-12">
+                    <div class="card">
+                        <div class="filter">
+                            <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
+                            <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
+                                <li class="dropdown-header text-start">
+                                    <h6>Filter</h6>
+                                </li>
 
-                <div class="filter">
-                    <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
-                    <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-                        <li class="dropdown-header text-start">
-                            <h6>Filter</h6>
-                        </li>
-
-                        <li><a class="dropdown-item" href="#">Today</a></li>
-                        <li><a class="dropdown-item" href="#">This Month</a></li>
-                        <li><a class="dropdown-item" href="#">This Year</a></li>
-                    </ul>
-                </div>
-
-                <div class="card-body">
-                    <h5 class="card-title">Productos <span>| En tienda</span></h5>
-
-                    <div class="d-flex align-items-center">
-                        <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                            <i class="bi bi-cart"></i>
+                                <li><a class="dropdown-item">Hoy</a></li>
+                                <li><a class="dropdown-item">Este mes</a></li>
+                                <li><a class="dropdown-item">Este año</a></li>
+                                <li><a class="dropdown-item">Todos</a></li>
+                            </ul>
                         </div>
-                        <div class="ps-3">
-                            <h6>{{this.cantidadProductosTienda}}</h6>
-                            <span class="text-success small pt-1 fw-bold"></span> <span
-                                class="text-muted small pt-2 ps-1">En tienda</span>
 
+                        <div class="card-body">
+                            <h5 class="card-title">Ventas <span>| Totales</span></h5>
+
+                            <div class="activity">
+
+                                <div class="activity-item d-flex">
+                                    <div class="activite-label">
+                                        {{this.totalesVentas.pedidosEntregados | number:'1.0-0'}}
+                                        <div *ngIf="this.totalesVentas.pedidosEntregados == undefined" class="spinner-border spinner-border-sm" role="status">
+                                            <span class="visually-hidden">Loading...</span>
+                                        </div>
+                                    </div>
+                                    <i class="bi bi-circle-fill activity-badge text-success align-self-start"></i>
+                                    <div class="activity-content">
+                                        Pedidos entregados
+                                    </div>
+                                </div>
+
+                                <div class="activity-item d-flex">
+                                    <div class="activite-label">
+                                        {{this.totalesVentas.productosVendidos | number:'1.0-0'}}
+                                        <div *ngIf="this.totalesVentas.productosVendidos == undefined" class="spinner-border spinner-border-sm" role="status">
+                                            <span class="visually-hidden">Loading...</span>
+                                        </div>
+                                    </div>
+                                    <i class="bi bi-circle-fill activity-badge text-danger align-self-start"></i>
+                                    <div class="activity-content">
+                                        Productos diferentes vendidos
+                                    </div>
+                                </div>
+
+                                <div class="activity-item d-flex">
+                                    <div class="activite-label">
+                                        {{this.totalesVentas.articulosVendidos | number:'1.0-0'}}
+                                        <div *ngIf="this.totalesVentas.articulosVendidos == undefined" class="spinner-border spinner-border-sm" role="status">
+                                            <span class="visually-hidden">Loading...</span>
+                                        </div>
+                                    </div>
+                                    <i class="bi bi-circle-fill activity-badge text-primary align-self-start"></i>
+                                    <div class="activity-content">
+                                        Articulos vendidos
+                                    </div>
+                                </div>
+
+                                <div class="activity-item d-flex">
+                                    <div class="activite-label">
+                                        $ {{this.totalesVentas.totalGanancias | number:'1.2-2'}}
+                                        <div *ngIf="this.totalesVentas.totalGanancias == undefined" class="spinner-border spinner-border-sm" role="status">
+                                            <span class="visually-hidden">Loading...</span>
+                                        </div>
+                                    </div>
+                                    <i class="bi bi-circle-fill activity-badge text-info align-self-start"></i>
+                                    <div class="activity-content">
+                                        En total
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
 
-            </div>
-        </div>
+                <div class="col-xxl-12 col-md-6 col-12">
+                    <div class="card info-card success">
 
-        <div class="col-xxl-4 col-md-6">
-            <div class="card info-card customers-card">
+                        <div class="filter">
+                            <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
+                            <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
+                                <li class="dropdown-header text-start">
+                                    <h6>Filter</h6>
+                                </li>
 
-                <div class="filter">
-                    <a class="icon" href="#" data-bs-toggle="dropdown"><i class="bi bi-three-dots"></i></a>
-                    <ul class="dropdown-menu dropdown-menu-end dropdown-menu-arrow">
-                        <li class="dropdown-header text-start">
-                            <h6>Filter</h6>
-                        </li>
-
-                        <li><a class="dropdown-item" href="#">Today</a></li>
-                        <li><a class="dropdown-item" href="#">This Month</a></li>
-                        <li><a class="dropdown-item" href="#">This Year</a></li>
-                    </ul>
-                </div>
-
-                <div class="card-body">
-                    <h5 class="card-title">Clientes <span>| Activos</span></h5>
-
-                    <div class="d-flex align-items-center">
-                        <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
-                            <i class="bi bi-people"></i>
+                                <li><a class="dropdown-item">Hoy</a></li>
+                                <li><a class="dropdown-item">Este mes</a></li>
+                                <li><a class="dropdown-item">Este año</a></li>
+                                <li><a class="dropdown-item">Todos</a></li>
+                            </ul>
                         </div>
-                        <div class="ps-3">
-                            <h6>{{this.cantidadUsuariosTienda}}</h6>
-                            <span class="text-success small pt-1 fw-bold"></span> <span
-                                class="text-muted small pt-2 ps-1">Activos</span>
 
+                        <div class="card-body">
+                            <h5 class="card-title">Productos <span>| En tienda</span></h5>
+
+                            <div class="d-flex align-items-center">
+                                <div class="card-icon rounded-circle d-flex align-items-center justify-content-center">
+                                    <i class="bi bi-cart"></i>
+                                </div>
+                                <div class="ps-3">
+                                    <h6>
+                                        <ng-container *ngIf="this.cantidadProductosTienda === ''; else cantidadPT">
+                                            <div class="spinner-border text-primary" role="status">
+                                                <span class="visually-hidden">Loading...</span>
+                                            </div>
+                                        </ng-container>
+                                        <ng-template #cantidadPT>
+                                            {{this.cantidadProductosTienda}}
+                                        </ng-template>
+                                    </h6>
+                                    <span class="text-success small pt-1 fw-bold"></span> <span
+                                        class="text-muted small pt-2 ps-1">En tienda</span>
+
+                                </div>
+                            </div>
                         </div>
+
                     </div>
                 </div>
-
             </div>
         </div>
     </div>
