Se agrega gestión de catálogo categorías

--- a/front/src/app/dashboard-e-commerce/home/components/sidenav/sidenav.component.html
+++ b/front/src/app/dashboard-e-commerce/home/components/sidenav/sidenav.component.html
@@ -44,7 +44,7 @@
                 <i class="bi bi-people"></i><span>Catálogos</span><i class="bi bi-chevron-down ms-auto"></i>
             </a>
             <ul id="catalogos" class="nav-content collapse " data-bs-parent="#sidebar-nav">
-                <li>
+                <li (click)="abrirModal('catalogoCategorias')">
                     <a>
                         <i class="bi bi-circle"></i><span>Categorías Productos</span>
                     </a>
