--- a/front/src/app/dashboard-e-commerce/home/components/sidenav/sidenav.component.html
+++ b/front/src/app/dashboard-e-commerce/home/components/sidenav/sidenav.component.html
@@ -49,7 +49,7 @@
                         <i class="bi bi-circle"></i><span>Categorías Productos</span>
                     </a>
                 </li>
-                <li>
+                <li (click)="abrirModal('catalogoApartados')">
                     <a>
                         <i class="bi bi-circle"></i><span>Apartados Productos</span>
                     </a>
