--- a/front/src/app/dashboard-e-commerce/home/home.component.html
+++ b/front/src/app/dashboard-e-commerce/home/home.component.html
@@ -1,7 +1,8 @@
-<div class="{{ dataService.claseSidebar }}" >
+<div class="{{ dataService.claseSidebar }} wrapper">
     <app-navbar></app-navbar>
     <app-sidenav></app-sidenav>
     <main id="main" class="main">
         <router-outlet></router-outlet>
     </main>
+    <app-footer></app-footer>
 </div>
