--- a/front/src/app/dashboard-e-commerce/home/components/datatable/datatable.component.html
+++ b/front/src/app/dashboard-e-commerce/home/components/datatable/datatable.component.html
@@ -166,7 +166,7 @@
         <div class="col-sm-12 text-center">
             <span *ngIf="datosTabla.length > 0">
                 <br>
-                Mostrando registros del {{ getStartIndex() }} al {{ getEndIndex() }} de un total de {{ datosTabla.length
+                Mostrando registros del {{ getStartIndex() }} al {{ getEndIndex() }} de un total de {{ registrosBusqueda
                 }} registros
             </span>
         </div>
